package com.chucknorris.common.domain.models;

public record ErrorResultStatus(int code, String message) { }
